# University

UGR/New_Screen_26/UGR_Driver_Screen_26_PCB/: #auto_saved_files#  UGR_Driver_Screen_26.kicad_pcb  UGR_Driver_Screen_26.kicad_prl  UGR_Driver_Screen_26.kicad_pro  UGR_Driver_Screen_26.kicad_sch  UGR_Driver_Screen_26_BOM.csv  _autosave-UGR_Driver_Screen_26.kicad_pcb  fp-info-cache  ~UGR_Driver_Screen_26.kicad_pcb.lck  ~UGR_Driver_Screen_26.kicad_sch.lck  ~_autosave-UGR_Driver_Screen_26.kicad_pcb.lck
UGR/New_Screen_26/UGR_Driver_Screen_26_PCB_V2/: UGR_Driver_Screen_26.csv  UGR_Driver_Screen_26.kicad_pcb  UGR_Driver_Screen_26.kicad_prl  UGR_Driver_Screen_26.kicad_pro  fp-info-cache  (+1 more)
UGR/Old_Screen_25/UGR_Screen_25_latest_code/: .cproject.bak  .mxproject  .project.bak  CMakeCache.txt  CMakeLists.txt  STM32F405RGTX_FLASH.ld  STM32F405RGTX_RAM.ld  UGR_Screen_25 Debug.launch  UGR_Screen_25.ioc  startup_stm32f405xx.s
UGR/Old_Screen_25/UGR_Screen_25_latest_code/Core/Inc/: GUI_Paint.h  LCD_2inch4.h  fonts.h  image.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
UGR/Old_Screen_25/UGR_Screen_25_latest_code/Core/Src/: GUI_Paint.c  LCD_2inch4.c  font24.c  fontBIG.c  fontBIG2.c  image.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c
UGR/Old_Screen_25/UGR_Screen_25_latest_code/Debug/: UGR_Screen_25.elf  UGR_Screen_25.list  UGR_Screen_25.map  makefile  objects.list
UGR/Old_Screen_25/UGR_Screen_25_latest_code/Debug/Core/Src/: GUI_Paint.cyclo  GUI_Paint.d  GUI_Paint.su  LCD_2inch4.cyclo  LCD_2inch4.d  LCD_2inch4.su  font24.d  fontBIG.d  fontBIG2.d  image.d  main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d
UGR/Old_Screen_25/UGR_Screen_25_latest_code/Debug/Core/Startup/: subdir.mk
UGR/Old_Screen_25/UGR_Screen_25_latest_code/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal.su  stm32f4xx_hal_can.cyclo  stm32f4xx_hal_can.d  stm32f4xx_hal_can.su  stm32f4xx_hal_cortex.d  stm32f4xx_hal_cortex.su  stm32f4xx_hal_dma.cyclo  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.cyclo  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_exti.su  stm32f4xx_hal_flash.cyclo  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash.su  stm32f4xx_hal_flash_ex.cyclo  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ex.su  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_hcd.cyclo  stm32f4xx_hal_hcd.d  stm32f4xx_hal_hcd.su  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc.su  stm32f4xx_hal_rcc_ex.cyclo  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_rcc_ex.su  stm32f4xx_hal_tim.cyclo  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim.su  stm32f4xx_hal_tim_ex.cyclo  stm32f4xx_hal_tim_ex.d  stm32f4xx_hal_tim_ex.su  stm32f4xx_ll_usb.cyclo  stm32f4xx_ll_usb.d  stm32f4xx_ll_usb.su  (+1 more)
UGR/Old_Screen_25/UGR_Screen_25_latest_code/cmake/: gcc-arm-none-eabi.cmake
Uni_Courses/Miscellaneous/: plotting.py
(+582 files in other folders)
